@@ -1,14 +1,12 @@
-
-
 name := "flight_prediction"
 
 version := "0.1"
 
-scalaVersion := "2.12.10"
+scalaVersion := "2.13.0"
 
-val sparkVersion = "3.5.3"
+val sparkVersion = "4.1.1"
 
-mainClass in Compile := Some("es.upm.dit.ging.predictor.MakePrediction")
+Compile / mainClass := Some("es.upm.dit.ging.predictor.MakePrediction")
 
 resolvers ++= Seq(
   "apache-snapshots" at "https://repository.apache.org/snapshots/"
@@ -22,5 +20,10 @@ libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-hive" % sparkVersion,
   "org.apache.spark" %% "spark-sql-kafka-0-10" % sparkVersion,
   "org.mongodb.spark" %% "mongo-spark-connector" % "10.4.1"
+)
 
+fork := true
+
+javaOptions ++= Seq(
+  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
 )
